--- a/config/locales/devise.he.yml
+++ b/config/locales/devise.he.yml
@@ -3,57 +3,66 @@
 he:
   devise:
     confirmations:
-      confirmed: "Your account was successfully confirmed. You are now signed in."
-      send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
+      confirmed: "הרישום מאושר. ברוכים הבאים!"
+      send_instructions: "בעוד מספר דקות יישלח אליך מייל לאישור הרישום שלך לאתר"
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes."
+      confirmation_title: "שליחת מייל חוזר לאישור הרישום"
+      confirmation_button: "שלח מייל עם לינק לאישור הרישום"
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account was not activated yet."
-      invalid: "Invalid email or password."
-      invalid_token: "Invalid authentication token."
-      locked: "Your account is locked."
-      not_found_in_database: "Invalid email or password."
-      timeout: "Your session expired, please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your account before continuing."
+      already_authenticated: "הינך כבר מחובר/ת לאתר"
+      inactive: "הרשיום לאתר טרם הושלם"
+      invalid: "לא נמצא במערכת משתמש עם מייל וסיסמא כפי שהוקשו"
+      invalid_token: "הרישום נכשל"
+      locked: "חשבונך ננעל"
+      not_found_in_database: "לא נמצא במערכת משתמש עם מייל וסיסמא כפי שהוקשו"
+      timeout: "נא להיכנס מחדש למערכת"
+      unauthenticated: "יש להירשם או להיכנס למערכת"
+      unconfirmed: "נא לאשר את הרישום לאתר"
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "אישור הרישום לאתר"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "הוראות לאיפוס סיסמא"
       unlock_instructions:
-        subject: "Unlock Instructions"
+        subject: "הוראות לשחרור החשבון"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "לא הצליחה ההתחברות דרך  %{kind} בגלל \"%{reason}\"."
+      success: "ההתחברות דרך חשבון %{kind} הצליחה"
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions about how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password was changed successfully. You are now signed in."
-      updated_not_active: "Your password was changed successfully."
+      forgot: "שחזור סיסמא"
+      edit: "שינוי סיסמא"
+      send_password_reset: "שלח מייל עם לינק לאיפוס הסיסמא"
+      no_token: "נא להשתמש בלינק המלא שנשלח אלייך לאיפוס הסיסמא"
+      send_instructions: "בקרוב יישלח אליך מייל עם לינק לאיפוס הסיסמא"
+      send_paranoid_instructions: "אם המייל שלך קיים במערכת, בקרוב תקבל מייל עם לינק לשחזור הסיסמא"
+      updated: "הסיסמא שונתה, התחברת בהצלחה לאתר"
+      updated_not_active: "הסיסמא שונתה בהצלחה"
     registrations:
-      destroyed: "Bye! Your account was successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please open the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and click on the confirm link to finalize confirming your new email address."
-      updated: "You updated your account successfully."
+      destroyed: "הרישום שלך לאתר נמחק, מקווים לראותך שוב בקרוב"
+      signed_up: "ברוכים הבאים, הנך כעת רשום לאתר"
+      signed_up_but_inactive: "נרשמת בהצלחה, אך חשבונך אינו פעיל"
+      signed_up_but_locked: "נרשמת בהצלחה, אך חשבונך ננעל"
+      signed_up_but_unconfirmed: "ברגעים אלה נשלח אליך מייל עם לינק להפעלת חשבונך באתר"
+      update_needs_confirmation: "הפרטים עודכנו בהצלחה, אך יש צורך באישור השינוי דרך מייל שנשלח אליך ברגעים אלה"
+      updated: "פרטי המשתמש עודכנו בהצלחה"
+      add_phone: "נא להשלים את הרישום לאתר"
+      register_with: "התחבר עם "
+      sign_up: "טופס רישום לאתר"
+      update: "עריכת פרטי משתמש"
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
+      signed_in: "התחברת בהצלחה לאתר"
+      signed_out: "התנתקת בהצלחה מהאתר"
     unlocks:
-      send_instructions: "You will receive an email with instructions about how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions about how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "בעוד מספר דקות יישלח אליך מייל עם לינק לפתיחת הנעילה מהחשבון"
+      send_paranoid_instructions: "אם חשבונך קיים, יישלח אלייך מייל עם לינק לפתיחת הנעילה מהחשבון"
+      unlocked: "הנעילה הוסרה בהצלחה. התבחרת בהצלחה לאתר"
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "הרישום נקלט, נא להתחבר לאתר עם המייל שהוזן"
+      confirmation_period_expired: "יש לאשר את הרישום תוך  %{period}, תוכל לבקש מייל נוסף לאישור הרישום"
+      expired: "פג התוקף, נא לבקש מייל חדש לאישור הרישום"
+      not_found: "לא נמצא"
+      not_locked: "לא ננעל"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 שגיאה מנעה מ- %{resource} מלהישמר:"
+        other: "%{count} שגיאות מנעו מ- %{resource} מלהישמר:"
