all user related registration is ready

--- a/config/locales/devise.he.yml
+++ b/config/locales/devise.he.yml
@@ -49,6 +49,10 @@ he:
       register_with: "התחבר עם "
       sign_up: "טופס רישום לאתר"
       update: "עריכת פרטי משתמש"
+      delete: "למחיקת החשבון באתר לחצו כאן"
+      complete: "לצורך השלמת תהליך הרישום, נא להזין גם מספר טלפון (לא חובה אך מאוד רצוי)"
+      password_hint: "אין צורך למלא אם לא רוצים לשנות"
+      current_password: "נא להזין כאן את הסיסמא הנוכחית"
     sessions:
       signed_in: "התחברת בהצלחה לאתר"
       signed_out: "התנתקת בהצלחה מהאתר"
