--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -116,6 +116,7 @@ he:
   sign_in:
     title: "ניתן להתחבר בקלות עם פייסבוק או מייל"
     facebook: " | הכנס עם פייסבוק "
+    facebook_link: "ניתן להירשם גם עם פייסבוק"
     with_email: " אני רוצה להירשם!"
     signed_in_users: "משתמשים רשומים:"
     forgot_password: "שכחתי סיסמא"
