fixes to registration

--- a/config/locales/devise.he.yml
+++ b/config/locales/devise.he.yml
@@ -51,8 +51,9 @@ he:
       update: "עריכת פרטי משתמש"
       delete: "למחיקת החשבון באתר לחצו כאן"
       complete: "לצורך השלמת תהליך הרישום, נא להזין גם מספר טלפון (לא חובה אך מאוד רצוי)"
-      password_hint: "אין צורך למלא אם לא רוצים לשנות"
+      password_hint: "למלא רק אם רוצים לשנות"
       current_password: "נא להזין כאן את הסיסמא הנוכחית"
+      delete_user: ״האם למחוק את חשבון המשתמש?"
     sessions:
       signed_in: "התחברת בהצלחה לאתר"
       signed_out: "התנתקת בהצלחה מהאתר"
