--- a/config/locales/simple_form.he.yml
+++ b/config/locales/simple_form.he.yml
@@ -26,7 +26,7 @@ he:
         original_price: "מחיר במקור"
         height: "גובה התמונה"
         width: "רוחב התמונה"
-        age: "נקנה לפני"
+        age: "גיל התמונה בשנים"
         state: "מצב התמונה"
         image: "העלה תמונה"
         item_create: "התמונה התווספה בהצלחה"
@@ -55,3 +55,6 @@ he:
         submit: "קח אותי פנימה"
         create: "קח אותי פנימה"
         update: "עדכן נתונים"
+      item:
+        create: "צור תמונה"
+        update: "שמור תמונה"
