starting to work on the thumbnails

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -36,6 +36,8 @@ he:
   EditItem: "עריכת פרטי תמונה"
   Back: "חזרה"
   index_gallery: "כל התמונות להחלפה"
+  want: "רוצה להחליף"
+  years: "שנים"
 
   menu:
     home: "בית"
