added some validations to items

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -128,7 +128,7 @@ he:
   welcome:
     question1: "נמאס לך מהתמונה בסלון?"
     question2: "הילדים רוצים תמונות חדשות בחדר?"
-    answer: "כאן מחליפים תמונות קיר"
+    answer: "מחליפים תמונות קיר בקליק"
 
   sign_in:
     title: "ניתן להתחבר עם פייסבוק או מייל"
