fixed editing item form

--- a/config/locales/simple_form.he.yml
+++ b/config/locales/simple_form.he.yml
@@ -26,9 +26,9 @@ he:
         type: "סוג תמונה"
         description: "תיאור קצר"
         price: "מחיר במקור"
-        height: "גובה התמונה"
-        width: "רוחב התמונה"
-        age: "גיל התמונה בשנים"
+        height: "גובה התמונה (סמ׳)"
+        width: "רוחב התמונה (סמ׳)"
+        age: "גיל התמונה"
         state: "מצב התמונה"
         image: "העלה תמונה"
         item_create: "התמונה התווספה בהצלחה"
