added style to "trade now" button

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -36,7 +36,8 @@ he:
   EditItem: "עריכת פרטי תמונה"
   Back: "חזרה"
   index_gallery: "כל התמונות להחלפה"
-  want: "בוא נתחלף!"
+  want: "הצע החלפה"
+  trade: "התחלף עכשיו!"
   dont_want: "בטל החלפה"
   block: "חסום תמונה"
   years: "שנים"
