--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -44,7 +44,7 @@ he:
   my_items_user_wants_1: "תמונות שלי ש"
   my_items_user_wants_2: "רוצה"
   items_i_want_1: "תמונות של "
-  items_i_want_2: "שאני רוצה"
+  items_i_want_2: ""
   swap_now: "בצע החלפה!"
 
   menu:
