redesigning the contact button

--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -93,6 +93,7 @@ he:
     edit_item: "ערוך פרטי תמונה"
     all_items: "כל התמונות שלי"
     my_items: "התמונות שלי"
+    contact: "פרטי התקשרות"
 
     values:
       flgStatus:
