--- a/config/locales/simple_form.he.yml
+++ b/config/locales/simple_form.he.yml
@@ -31,6 +31,7 @@ he:
         age: "גיל התמונה"
         state: "מצב התמונה"
         image_url: "העלה תמונה"
+        update_image_url: "לחצו על הכפתור רק אם ברצונך להעלות תמונה חדשה"
         item_create: "התמונה התווספה בהצלחה"
         item_update: "פרטי התמונה עודכנו בהצלחה"
 
@@ -58,5 +59,5 @@ he:
         create: "קח אותי פנימה"
         update: "עדכן נתונים"
       item:
-        create: "צור תמונה"
-        update: "שמור תמונה"
+        create: "צור תמונה חדשה"
+        update: "ערוך פרטי התמונה"
