better registration after facebook

--- a/config/locales/devise.he.yml
+++ b/config/locales/devise.he.yml
@@ -50,7 +50,7 @@ he:
       sign_up: "טופס רישום לאתר"
       update: "עריכת פרטי משתמש"
       delete: "למחיקת החשבון באתר לחצו כאן"
-      complete: "לצורך השלמת תהליך הרישום, נא להזין גם מספר טלפון (לא חובה אך מאוד רצוי)"
+      complete: "השלמת הרישום"
       password_hint: "למלא רק אם רוצים לשנות"
       current_password: "נא להזין כאן את הסיסמא הנוכחית"
       delete_user: ״האם למחוק את חשבון המשתמש?"
