--- a/config/locales/simple_form.he.yml
+++ b/config/locales/simple_form.he.yml
@@ -31,7 +31,7 @@ he:
         age: "גיל התמונה"
         state: "מצב התמונה"
         image_url: "העלה תמונה"
-        update_image_url: "לחצו על הכפתור רק אם ברצונך להעלות תמונה חדשה"
+        update_image_url: "העלה תמונה (רק אם ברצונך לשנות את התמונה הקיימת)"
         item_create: "התמונה התווספה בהצלחה"
         item_update: "פרטי התמונה עודכנו בהצלחה"
 
