--- a/config/locales/he.yml
+++ b/config/locales/he.yml
@@ -136,7 +136,7 @@ he:
       invalid_param_id: "Parameter id is not correct."
   welcome:
     question1: "נמאס לך מהתמונה בסלון?"
-    question2: "הילדים רוצים תמונות חדשות בחדר?"
+    question2: "הילדים רוצים תמונה חדשה בחדר?"
     answer: "מחליפים תמונות קיר בקליק"
 
   sign_in:
